tdf#118806 sd: specify the motion path origin for pptx.

Motion path animation created by Impress always take the
position of the shape as the origin, so set origin=layout.

Change-Id: I8b4b579f3a2fc282b41a68c4c8d7573d01ad1aa9
Reviewed-on: https://gerrit.libreoffice.org/57583
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>