sd/source/filter/eppt/pptx-epptooxml.cxx
@@ -1186,6 +1186,7 @@ void PowerPointExport::WriteAnimationNodeAnimate(const FSHelperPtr& pFS, const R
             xMotion->getPath() >>= aPath;
 
         pFS->startElementNS(XML_p, nXmlNodeType,
+                            XML_origin, "layout",
                             XML_path, OUStringToOString(aPath, RTL_TEXTENCODING_UTF8),
                             FSEND);
     }
